resolve the problem with the dashboard-intro component on mobile devices

--- a/src/app/shared/profile-card/profile-card.component.scss
+++ b/src/app/shared/profile-card/profile-card.component.scss
@@ -51,7 +51,7 @@
 }
 
 .main-content {
-  margin-top: 100px;
+  margin-top: 80px;
 
   h2 {
     margin: 10px 0 10px 0px;
@@ -338,6 +338,16 @@
     height: 30px !important;
     cursor: pointer;
   }
+
+  &:hover {
+    scale: 1.3;
+  }
+}
+
+.avatar-list-wrapper {
+  padding-top: 10px;
+  width: 100%;
+  height: 60px;
 }
 
 .avatar-list {
@@ -345,7 +355,7 @@
   align-items: center;
   justify-content: center;
   gap: 10px;
-  padding-top: 10px;
+  animation: fadeIn;
 
   img {
     width: 35px;
